css/styles.css
:root {
	--dark-grey: #2A2B2A;
	--light-grey: #706C61;
	--off-white: #f8f4e3;

	--dark-coral: #4f5d75;
	--silver: #bfc0c0;

	--red: #bb4430;
	--blue: #7ebdc2;

	--dark-grey-highlight: rgb(63, 61, 60);
	--light-coral: #7f95bb;
	--red-highlight: #da7462;

}

html {
	scroll-behavior: smooth;
}

/* @font-face {
	font-family: 'Grotesque';
	src: url("/fonts/grotesque-bold.ttf") format('truetype');
} */

body {
	display: flex;
	color: var(--silver);
	font-family: "Bitter", Helvetica, Roboto, Arial, sans-serif;
	font-weight: normal;
	font-size: 110%;
}

h1,
h2,
h3,
h4 {
	font-style: normal;
	text-rendering: optimizeLegibility;
	letter-spacing: 0.04em;
}

p {
	-webkit-font-smoothing: antialiased;
}

#side-nav-container,
div.padder {
	background-color: var(--dark-grey);
	flex: 1;
}

main {
	background-color: var(--dark-grey-highlight);
	border-right: 1px solid var(--light-grey);
	max-width: 950px;
	padding: 6em;
}

#side-nav-container {
	position: relative;
	color: var(--off-white);
	border-right: 1px solid var(--light-grey);
}

nav {
	position: sticky;
	top: 20%;
}

a#square-logo {
	background: url(/images/amwd-logo.png) no-repeat;
	background-size: cover;
	height: 4em;
	display: block;

	margin-left: auto;
	margin-right: 0.7em;
	text-decoration: none;
	transition: transform 0.2s;
	width: 4em;

	/* 
	display: grid;
	font-family: monospace;
	font-size: 1.4em;
	color: inherit;
	grid-template-columns: 1fr 3fr 3fr 1fr;
	grid-template-rows: auto auto auto auto;
	grid-template-areas: "l z z r"
		"l a m r"
		"l w d r"
		"l y y r";
	text-align: center; */
}

#square-logo:hover {
	transform: scale(1.2);
}

/*
#square-logo .brace {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	font-size: 3em;
	position: relative;
	bottom: 0.05em;
	transition: all 0.2s ease-in-out;
}

#square-logo:hover .brace {
	color: var(--red);
}

#square-logo .lb {
	grid-area: l;
}

#square-logo .rb {
	grid-area: r;
}

#square-logo .t {
	position: relative;
	top: 0.2em;
}

#square-logo .b {
	position: relative;
	bottom: 0.2em;
}

#square-logo .l {
	margin-right: 0.1em;
	margin-left: -0.3em;
}

#square-logo .r {
	margin-right: -0.3em;
	margin-left: 0.1em;
}

#square-logo .a {
	grid-area: a;
}

#square-logo .m {
	grid-area: m;
}

#square-logo .w {
	grid-area: w;
}

#square-logo .d {
	grid-area: d;
} */

#main-nav {
	margin-top: 0.5em;
}

nav ul {
	list-style-type: none;
	padding-left: 0;
	text-align: right;
	margin-right: -1px;
}

nav ul a {
	display: block;
	color: inherit;
	text-decoration: none;
	font-size: 1.3rem;
	padding: 0.2em 0.44em 0.2em 0;
	/* padding-right: 0.44em; */
	border: 1px solid transparent;
	/* position: relative; */
}

#main-nav a {
	font-family: 'Orbitron', sans-serif;
	letter-spacing: 0.1em;
	font-weight: bold;
	text-transform: uppercase;
	transition: background-color 0.2s;
	padding-left: 0.46em;
}

#main-nav a.active-page {
	background-color: var(--dark-grey-highlight);
	border-top: 1px solid var(--light-grey);
	border-bottom: 1px solid var(--light-grey);
	border-right: 1px solid var(--dark-grey-highlight) !important;
}

#main-nav a:not(.active-page):hover {
	/* #social-links:hover li:first-of-type a { */
	background-color: var(--dark-coral);
	border-right: 1px solid var(--light-grey);
}

#social-links {
	display: flex;
	flex-direction: row-reverse;
	margin-right: 0.07em;
}

#social-links a {
	display: inline-block;
}

#social-links .social-icon {
	height: 1.3em;
	width: 1.3em;
	fill: var(--off-white);
	transition: fill 0.2s;
}

/* #social-links:hover {
	background-color: var(--dark-coral);
} */

#social-links a:hover .social-icon {
	fill: var(--red);
}

.lead {
	color: var(--off-white);
}

.muted {
	color: var(--light-grey);
}

h1 {
	color: var(--red);
	font-size: 310%;
}

.blink::after {
	content: "|";
	animation: blink 1s infinite;
}

.tagline {
	font-size: 120%;
	/* text-transform: capitalize; */
}

.intro {
	display: flex;
	align-items: center;
	justify-content: center;
}

.hexagon-hor {
	clip-path: polygon(75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%, 25% 0);
}

.hexagon-ver {
	clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
}

.headshot {
	background: url("/images/headshot_small.jpg") no-repeat;
	background-size: cover;
	background-position: 50% 35%;
	margin: 10px 0;
	height: 14rem;
	/* width: calc(14rem * 1.1547); */
	flex: 0 0 calc(14rem * 1.1547);
	/* border-right: 65px solid var(--light-coral); */
}

.logo {
	margin-left: 2em;
	text-align: center;
}

h2 {
	color: var(--light-coral);
	font-size: 200%;
}

main a {
	color: var(--red);
	text-decoration: none;
}

main a:hover {
	text-decoration: underline;
	color: var(--red-highlight);
}

.skills#main-skills-list {
	justify-content: space-between;
	color: var(--off-white);
}

ul.skills {
	display: flex;
	flex-wrap: wrap;
}

.skills#main-skills-list li {
	margin: 0 0.5em;
}

.skills#main-skills-list li:last-of-type {
	margin-right: auto;
}

.skills#main-skills-list li::before {
	content: "/";
	margin-right: 1px;
	color: var(--light-grey);
}

/* 
ul.skills li::after {
	content: "]";
	margin-left: 1px;
	color: var(--light-grey);
} */

#portfolio-items {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	margin-left: -3em;
	margin-right: -3em;
}

.portfolio-item {
	font-size: 0.9em;
	flex: 1 0 20em;
	max-width: 30em;
	background-color: var(--dark-grey);
	box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.54);
	transition: transform 0.2s;
	display: flex;
	flex-direction: column;
	margin-left: 0.5em;
	margin-right: 0.5em;
	margin-bottom: 1em;
}

.portfolio-item:hover {
	transform: scale(1.03);
}

.portfolio-item img {
	object-fit: cover;
	height: 18em;
}

.portfolio-item :not(img) {
	margin-left: 1em;
	margin-right: 1em;
}

.portfolio-item h3 {
	color: var(--off-white);
}

.portfolio-item p {
	flex: 1;
}

.portfolio-buttons {
	display: flex;
}

.portfolio-buttons button {
	padding: 0.4em 0;
	margin: 0;
	flex: 1 0 34%;
}

.portfolio-buttons button:first-of-type {
	margin-right: 1em;
}

.portfolio-item .skills {
	margin-right: 0;
	margin-bottom: 0.5em;
}

.portfolio-item .skills li {
	background-color: var(--dark-coral);
	padding: 0.1em 0.5em;
	margin-left: 0;
	margin-right: 0.5em;
	margin-bottom: 0.5em;
}

.portfolio-item .skills li:not(:first-of-type) {
	/* margin-left: 1em; */
}

input,
textarea,
button {
	padding: 0.4em 0.7em;
	font-size: 90%;
	border: 1px solid transparent;
}

form {
	display: flex;
	flex-wrap: wrap;
	padding: 1em 1em 1em 2em;
	justify-content: center;
	max-width: 620px;
	margin: 0 auto;
}

input,
textarea,
form button {
	margin-right: 1em;
}

input {
	flex: 1;
	min-width: 15em;
	margin-bottom: 1em;
}

input:first-of-type {
	/* margin-right: 1em; */
}

textarea {
	resize: vertical;
	width: 100%;
	margin-bottom: 1em;
}

button {
	cursor: pointer;
	color: var(--off-white);
	background-color: var(--red);
	padding: 0.4em 4em;
	/* transition: background-color 0.2s; */
}

button:hover {
	background-color: var(--red-highlight);
}

.footer {
	text-align: center;
}

@keyframes blink {
	0% {
		opacity: 1;
	}

	100% {
		opacity: 0;
	}

	0% {
		opacity: 1;
	}
}

@media (max-width: 890px) {

	main {
		padding: 3em;
	}

	#portfolio-items {
		margin-left: 0;
		margin-right: 0;
	}

}

@media (max-width: 780px) {

	main {
		padding: 2em;
	}

}

@media (max-width: 740px) {

	body {
		flex-direction: column;
		position: relative;
	}

	main {
		border-right: none;
	}

	#side-nav-container {
		position: sticky;
		top: 0;
		z-index: 1;
		border-bottom: 1px solid var(--light-grey);
	}

	#side-nav {
		display: flex;
		align-items: center;
		justify-content: space-between;
	}

	#side-nav>* {
		margin: 0;
	}

	a#square-logo {
		flex-shrink: 0;
		width: 3em;
		height: 3em;
		margin: 0.3em 0.5em;
		position: relative;
		bottom: 0.2em;
	}

	#main-nav {
		display: flex;
	}

	#main-nav a {
		transition: color 0.2s;
	}

	#main-nav a:hover {
		background: none !important;
		border: 1px solid transparent !important;
		color: var(--red) !important;
	}

	#main-nav a.active-page {
		background: none;
		border: 1px solid transparent !important;
		color: var(--dark-coral);
	}

	#social-links a {
		padding: 0;
		margin-right: 0.5em;
	}

	#social-links a svg {
		position: relative;
		top: 0.25em;
	}

}

@media (max-width: 600px) {}

